--- a/documentation/template.ejs
+++ b/documentation/template.ejs
@@ -27,8 +27,13 @@
             ###<?= methodName ?>
             <?= block.description ?>
 
-            <? block.paramTags.forEach(function(tag) { ?>
-                - <?= tag.name ?>: {<?= tag.joinedTypes ?>} <?= tag.description ?>
+            <? block.raw.tags.forEach(function(tag) { ?>
+                <? if (tag.type === 'type') { ?>
+                    - <?= tag.types[0] ?>
+                <? } ?>
+                <? if (tag.type === 'see') { ?>
+                    - See: <?= tag.local ?>
+                <? } ?>
             <? }) ?>
         <? } ?>
     <? }) ?>
