--- a/documentation/template.ejs
+++ b/documentation/template.ejs
@@ -29,7 +29,7 @@
 
             <? block.raw.tags.forEach(function(tag) { ?>
                 <? if (tag.type === 'type') { ?>
-                    - <?= tag.types[0] ?>
+                    - *<?= tag.types[0] ?>*
                 <? } ?>
                 <? if (tag.type === 'see') { ?>
                     - See: <?= tag.local ?>
@@ -47,11 +47,11 @@
             <?= block.description ?>
 
             <? block.paramTags.forEach(function(tag) { ?>
-                - <?= tag.name ?>: {<?= tag.joinedTypes ?>} <?= tag.description ?>
+                - <?= tag.name ?>: *<?= tag.joinedTypes ?>* <?= tag.description ?>
             <? }) ?>
 
             <? var isExample = false ?>
-            ````
+            <!-- ```` -->
                 <? block.raw.tags.forEach(function(tag) { ?>
                   <? if (tag.type === 'example') { ?>
                         <?  isExample = true ?>
@@ -60,7 +60,7 @@
                         <?= tag.string ?>
                   <? } ?>
                 <? }) ?>
-            ````
+            <!-- ```` -->
         <? } ?>
     <? }) ?>
 <? }) ?>
