Added data-field to templates

--- a/src/components/assignment/templates/edit-user-row.html
+++ b/src/components/assignment/templates/edit-user-row.html
@@ -1,9 +1,9 @@
 <td><input type="checkbox" class="select" data-id="<%= id%>"</td>
 <td>
-    <input type="text" value="<%= world %>">
+    <input type="text" data-field="world" value="<%= world %>">
 </td>
 <td>
-    <input type="text" value="<%= role %>">
+    <input type="text" data-field="role" value="<%= role %>">
 </td>
 <td><%= lastName %></td>
 <td><%= userName %></td>
