Implemented selectAll and un-assign selected

--- a/src/components/assignment/index.html
+++ b/src/components/assignment/index.html
@@ -30,6 +30,10 @@
         <div class="row">
             <div class="col-xs-12">
                 <div id="assignment-component">
+                    <div class="component controls" style="opacity: 0;">
+                        <button class="unassign-user btn">Unassign</button>
+                        <button class="make-user-inactive btn">Make Inactive</button>
+                    </div>
                     <table class="table users-table">
                         <thead>
                             <tr>
