--- a/src/components/assignment/index.html
+++ b/src/components/assignment/index.html
@@ -45,6 +45,11 @@
                                 <th>Unassigned</th>
                                 <th></th>
                             </tr>
+                            <tr>
+                                <th colspan="7" class="table-controls" >
+                                    <button class="auto-assign-all btn">Automatically Assign Users</button>
+                                </th>
+                            </tr>
                         </thead>
                         <tbody></tbody>
                     </table>
