Styling and change defaults

--- a/src/components/assignment/index.html
+++ b/src/components/assignment/index.html
@@ -30,6 +30,17 @@
         <div class="row">
             <div class="col-xs-12">
                 <div id="assignment-component">
+                    <div class="row">
+                        <div class="col-xs-4 table-controls">
+                            Automatically assign users to worlds
+                        </div>
+                        <div class="col-xs-4 table-controls">
+                            <button class="auto-assign-all btn">Assign</button>
+                        </div>
+                        <div class="col-xs-4">
+                            status
+                        </div>
+                    </div>
                     <div class="component controls" style="opacity: 0;">
                         <button class="unassign-user btn">Unassign</button>
                         <button class="make-user-inactive btn">Make Inactive</button>
@@ -44,11 +55,6 @@
                                 <th>Username</th>
                                 <th>Unassigned</th>
                                 <th></th>
-                            </tr>
-                            <tr>
-                                <th colspan="7" class="table-controls" >
-                                    <button class="auto-assign-all btn">Automatically Assign Users</button>
-                                </th>
                             </tr>
                         </thead>
                         <tbody></tbody>
