Added status widget and changed layout

--- a/src/components/assignment/index.html
+++ b/src/components/assignment/index.html
@@ -31,14 +31,17 @@
             <div class="col-xs-12">
                 <div id="assignment-component">
                     <div class="row">
-                        <div class="col-xs-4 table-controls">
-                            Automatically assign users to worlds
-                        </div>
-                        <div class="col-xs-4 table-controls">
+                        <div class="col-xs-12 table-controls">
+                            Automatically assign users
+                            <span class="single" style="display: none;">to a single world with maximum users per team
+                            <input type="number" class="form-control" id="max-users">
+                            </span>
+                            <span class="dynamic" style="display: none;">to worlds dynamically based on roles</span>
                             <button class="auto-assign-all btn">Assign</button>
-                        </div>
-                        <div class="col-xs-4">
-                            status
+                            <span class="status-widget pull-right">
+                                <span id="users-status"></span>
+                                <span id="worlds-status"></span>
+                            </span>
                         </div>
                     </div>
                     <div class="component controls" style="opacity: 0;">
