--- a/src/components/assignment/index.html
+++ b/src/components/assignment/index.html
@@ -15,7 +15,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
         <script src="../../epicenter-edge.js"></script>
-        <script src="assignment.js"></script>
     </head>
     <body>
 
@@ -32,17 +31,22 @@
                 <div id="assignment-component">
                     <div class="row">
                         <div class="col-xs-12">
-                            <span class="table-controls">
+                            <span class="table-controls form-inline">
                                 Automatically assign users
-                                <span class="single" style="display: none;">to a single world with maximum users per team
-                                <input type="number" class="form-control" id="max-users">
+
+                                <span class="single" style="display: none;">
+                                    to teams. Users/Team:
+                                    <input type="number" class="form-control" id="max-users" min="1">
                                 </span>
-                                <span class="dynamic" style="display: none;">to worlds dynamically based on roles</span>
+                                <span class="dynamic" style="display: none;">
+                                    to worlds.
+                                </span>
+
                                 <button class="auto-assign-all btn">Assign</button>
                             </span>
                             <span class="status-widget pull-right">
-                                <span id="users-status"></span>
-                                <span id="worlds-status"></span>
+                                <span id="users-status"><em class="icon f-icon"></em><span class="text"></span></span>
+                                <span id="worlds-status"><em class="icon f-icon"></em><span class="text"></span></span>
                             </span>
                         </div>
                     </div>
@@ -64,14 +68,21 @@
                         </thead>
                         <tbody></tbody>
                     </table>
-
-
-
                 </div>
 
             </div>
         </div>
     </div>
+    <script src="assignment.js"></script>
+    <script>
+        new window.forio.MultiplayerAssignmentComponent({
+            el: '#assignment-component',
+            account: 'forio-dev',
+            project: 'test',
+            group: 'test-feb-2015',
+            groupId: '81ab7281-3cad-4cea-822c-6ef967d8e2cc'
+        }).load();
 
+    </script>
     </body>
 </html>
