Added correct classes to rows for styling

--- a/src/components/assignment/templates/edit-user-row.html
+++ b/src/components/assignment/templates/edit-user-row.html
@@ -15,8 +15,8 @@
 </td>
 <td><%= lastName %></td>
 <td><%= userName %></td>
-<td><%= !world ? '<em class="warning"></em>' : '' %></td>
+<td><%= !world ? '<em class="f-icon f-warning"></em>' : '' %></td>
 <td class="actions">
-    <button class="btn btn-primary save">Save</button>
-    <button class="btn cancel">Cancel</button>
+    <button class="btn btn-primary btn-tools btn-save save">Save</button>
+    <button class="btn btn-tools btn-cancel cancel">Cancel</button>
 </td>
