--- a/src/components/assignment/templates/user-row.html
+++ b/src/components/assignment/templates/user-row.html
@@ -3,5 +3,5 @@
 <td><%= role %></td>
 <td><%= lastName %></td>
 <td><%= userName %></td>
-<td></td>
-<td class="actions"><button class="btn edit auto-hide">Edit</button></td>
+<td><%= !world ? '<em class="f-icon f-warning"></em>' : '' %></td>
+<td class="actions"><button class="btn edit btn-edit btn-tools auto-hide">Edit</button></td>
