Clean up default configuration

--- a/src/components/assignment/index.html
+++ b/src/components/assignment/index.html
@@ -80,7 +80,12 @@
             account: 'forio-dev',
             project: 'test',
             group: 'test-feb-2015',
-            groupId: '81ab7281-3cad-4cea-822c-6ef967d8e2cc'
+            groupId: '81ab7281-3cad-4cea-822c-6ef967d8e2cc',
+            token: 'the-token',
+            server: {
+                host: 'localhost:8080',
+                protocol: 'http'
+            }
         }).load();
 
     </script>
