--- a/src/components/assignment/templates/edit-user-row.html
+++ b/src/components/assignment/templates/edit-user-row.html
@@ -1,6 +1,11 @@
 <td><input type="checkbox" class="select" data-id="<%= id %>"</td>
 <td>
-    <input type="text" class="form-control" data-field="world" value="<%= world %>">
+    <select name="worlds" class="form-control" data-field="world">
+
+    <% _.each(worlds, function (w) { %>
+        <option value="<%= w %>" <%= w === world ? 'selected' : '' %>> <%= w %> </option>
+    <% }); %>
+    </select>
 </td>
 <td>
     <select name="roles" class="form-control" data-field="role">
