EPICENTER-524: added warning to incomplete worlds

--- a/src/components/assignment/templates/user-row.html
+++ b/src/components/assignment/templates/user-row.html
@@ -1,4 +1,5 @@
 <td><input type="checkbox" class="select" data-id="<%= id%>"</td>
+<td><%= !isWorldComplete ? '<em class="f-icon f-warning"></em>' : '' %></td>
 <td><%= world %></td>
 <td><%= role %></td>
 <td><%= lastName %></td>
