Small styling for assignment component

--- a/src/components/assignment/index.html
+++ b/src/components/assignment/index.html
@@ -42,7 +42,7 @@
                                     <input type="number" class="form-control" id="max-users" min="1">
                                 </span>
 
-                                <button class="auto-assign-all btn">Assign</button>
+                                <button class="auto-assign-all btn btn-success">Assign</button>
                             </span>
                             <span class="status-widget pull-right">
                                 <span id="users-status"><em class="icon f-icon"></em><span class="text"></span></span>
