--- a/src/components/login/index.html
+++ b/src/components/login/index.html
@@ -8,14 +8,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- login.css provides styling for the group selector pop over dialog -->
-        <link rel="stylesheet" href="login.css">
+        <link rel="stylesheet" href="https://forio.com/tools/js-libs/<%= version %>/components/login/login.css">
 
         <!-- the inserted pop over is compatible with bootstrap classes, so optionally you can include bootstrap -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
         <!-- make sure to include jquery, epicenter.js and login.js -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="../../../dist/epicenter.min.js"></script>
-        <script src="login.js"></script>
+        <script src="https://forio.com/tools/js-libs/<%= version %>/epicenter.min.js"></script>
+        <script src="https://forio.com/tools/js-libs/<%= version %>/components/login/login.js"></script>
     </head>
     <body>
         <!--
