--- a/documentation/template.ejs
+++ b/documentation/template.ejs
@@ -16,7 +16,7 @@
 
     <? var configStart = 0 ?>
     <? doc.javadoc.forEach(function (block) { ?>
-        <? if (!block.paramStr) { ?>
+        <? if (!block.paramStr && (block.returnTags.length == 0)) { ?>
             <? if (configStart === 0) { ?>
                 ##Configuration Options
 
@@ -42,7 +42,7 @@
 
     <? var methodStart = 0 ?>
     <? doc.javadoc.forEach(function (block) { ?>
-        <? if (block.paramStr) { ?>
+        <? if (block.paramStr || (block.returnTags.length > 0)) { ?>
             <? if (methodStart === 0) { ?>
                 ##Methods
 
