remove jshint/jscs references

--- a/documentation/template.ejs
+++ b/documentation/template.ejs
@@ -55,7 +55,7 @@
             <?= block.description ?>
 
             <? block.paramTags.forEach(function (tag) { ?>
-                - <?= tag.name ?>: *<?= tag.joinedTypes ?>* <?= tag.description ?>
+                - `<?= tag.name ?>`: *<?= tag.joinedTypes ?>* <?= tag.description ?>
             <? }) ?>
 
             <? var isExample = false ?>
