update links (/strategy/ moved to /generated/strategies/), also add line breaks before lists where they were removed

--- a/documentation/run-strategies-template.ejs
+++ b/documentation/run-strategies-template.ejs
@@ -6,7 +6,7 @@ isPage: true
 
 ## Run Manager Strategies
 
-The [Run Manager](../generated/run-manager/) gives you control over run creation, depending on run state. You can select run creation stratgies (rules) for which runs end users of your project work with when they log in to your project.
+The [Run Manager](../run-manager/) gives you control over run creation, depending on run state. You can select run creation stratgies (rules) for which runs end users of your project work with when they log in to your project.
 
 There are several strategies included in epicenter.js:
 
