--- a/documentation/run-strategies-template.ejs
+++ b/documentation/run-strategies-template.ejs
@@ -17,11 +17,13 @@ You can also [create your own](#create-your-own).
 
 <? docfiles.forEach(function (doc) { ?>
     <? var moduleName = doc.filename.split('/').pop().split('.')[0].replace('-strategy', '') ?>
-    <a name="<?= moduleName ?>"></a>
-    #### <?= moduleName ?>
-
     <? var moduleDoc = doc.javadoc.shift() ?>
+    <a name="<?= moduleName ?>"></a>
+    #### <?= moduleName ?> 
+    <? if (moduleDoc.name){ ?>###### a.k.a <?= moduleDoc.name ?> <? } ?><? if (moduleDoc.deprecated){ ?>##### DEPRECATED<? } ?>
+
     <?= moduleDoc.description ?>
+    <? console.log(moduleDoc) ?>
 <? }); ?>
 
 <a name="create-your-own"></a>
