epi-2552 spelling fix

--- a/documentation/run-strategies-template.ejs
+++ b/documentation/run-strategies-template.ejs
@@ -51,7 +51,7 @@ For example:
 	    },
 	    getRun: function (runService, session) {
 	    	// return the correct run
-	    	// for example, the most recent run that matches some critiera of your choosing
+	    	// for example, the most recent run that matches some criteria of your choosing
 	    },
 	    reset: function (runService, session) {
 	    	// how to respond to a reset call
