--- a/documentation/template.ejs
+++ b/documentation/template.ejs
@@ -40,16 +40,32 @@
         <? } ?>
     <? }) ?>
 
+    <? var propertyStart = 0 ?>
+    <? doc.javadoc.forEach(function (block){ ?>
+        <? if ((block.returnTags.length == 1) && (block.paramStr.length == 0)) { ?>
+            <? if (propertyStart === 0) { ?>
+                ## Properties
+                <? propertyStart = 1 ?>
+            <? } ?>
+            <? var propertyName = block.raw.code.split('this.')[1] ?>
+            <? propertyName = propertyName.split(' = ')[0] ?>
+
+            ### <?= propertyName ?>
+            <?= block.description ?>
+        <? } ?>
+    <? }) ?>
+
     <? var methodStart = 0 ?>
     <? doc.javadoc.forEach(function (block) { ?>
-        <? if (block.paramStr || (block.returnTags.length > 0)) { ?>
+        <? if (block.paramStr) { ?>
             <? if (methodStart === 0) { ?>
                 ## Methods
 
                 <? methodStart = 1 ?>
             <? } ?>
 
-            <? var methodName =  block.raw.code.split(':')[0] ?>
+            <? var methodName = block.raw.code.split(':')[0] ?>
+            <? methodName = methodName.split(' =')[0] ?>
 
             ### <?= methodName ?>
             <?= block.description ?>
