--- a/documentation/run-strategies-template.ejs
+++ b/documentation/run-strategies-template.ejs
@@ -4,6 +4,8 @@ layout: "default"
 isPage: true
 ---
 
+<? var top = docfiles.pop() ?>
+
 ## Run Manager Strategies
 
 The [Run Manager](../run-manager/) gives you control over run creation, depending on run state. You can select run creation stratgies (rules) for which runs end users of your project work with when they log in to your project.
@@ -13,7 +15,7 @@ There are several strategies included in Epicenter.js:
 <? docfiles.forEach(function (doc) { ?><? var moduleName = doc.filename.split('/').pop().split('.')[0].replace('-strategy', '') ?>
 * [<?= moduleName ?>](#<?= moduleName ?>)<? }); ?>
 
-In addition, there are two strategies currently used by the Epicenter.js [Scenario Manager](../scenario-manager/):
+In addition, there are two strategies currently used only by the [Scenario Manager](../scenario-manager/):
 
 * [baseline](../scenario-manager/baseline/)
 * [current](../scenario-manager/current/)
@@ -24,7 +26,8 @@ You can also [create your own strategy](#create-your-own) and see [more details 
     <? var moduleName = doc.filename.split('/').pop().split('.')[0].replace('-strategy', '') ?>
     <? var moduleDoc = doc.javadoc.shift() ?>
     <a name="<?= moduleName ?>"></a>
-    ### <?= moduleName ?> <? if (moduleDoc.name){ ?> **a.k.a <?= moduleDoc.name ?>** <? } ?><? if (moduleDoc.deprecated){ ?>(**DEPRECATED**)<? } ?>
+    #### <?= moduleName ?> 
+    <? if (moduleDoc.name){ ?>###### a.k.a <?= moduleDoc.name ?> <? } ?><? if (moduleDoc.deprecated){ ?>##### DEPRECATED<? } ?>
 
     <?= moduleDoc.description ?>
     <? console.log(moduleDoc) ?>
@@ -63,4 +66,58 @@ For example:
 	    }
 	});
 
+    <? var moduleDoc = top.javadoc.shift() ?>
+    <?= moduleDoc.description ?>
+
+
+    <? var firstTag = moduleDoc.raw.tags[0] ?>
+
+
+    <? var configStart = 0 ?>
+    <? top.javadoc.forEach(function (block) { ?>
+        <? if (!block.paramStr && (block.returnTags.length == 0)) { ?>
+            <? if (configStart === 0) { ?>
+                #### Configuration Options
+
+                <? configStart = 1 ?>
+            <? } ?>
+            <? var configOption =  block.raw.code.split(':')[0] ?>
+
+            ##### <?= configOption ?>
+
+            <? block.raw.tags.forEach(function (tag) { ?>
+                <? if (tag.type === 'type') { ?>
+                    - *<?= tag.types[0] ?>* 
+                <? } ?>
+                <? if (tag.type === 'see') { ?>
+                    - See: <?= tag.local ?>
+                <? } ?>
+            <? }) ?>
+
+            <?= block.description ?>
+            
+        <? } ?>
+    <? }) ?>
+
+    <? var methodStart = 0 ?>
+    <? top.javadoc.forEach(function (block) { ?>
+        <? if (block.paramStr) { ?>
+            <? if (methodStart === 0) { ?>
+                #### Methods
+
+                <? methodStart = 1 ?>
+            <? } ?>
+
+            <? var methodName = block.raw.code.split(':')[0] ?>
+            <? methodName = methodName.split(' =')[0] ?>
+
+            ##### <?= methodName ?>
+            <?= block.description ?>
+
+            <? block.paramTags.forEach(function (tag) { ?>
+                - `<?= tag.name ?>`: *<?= tag.joinedTypes ?>* <?= tag.description ?>
+            <? }) ?>
+
+        <? } ?>
+    <? }) ?>
 
