--- a/src/components/login/facilitator.html
+++ b/src/components/login/facilitator.html
@@ -15,12 +15,8 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="//forio.com/tools/js-libs/<%= version %>/epicenter.min.js"></script>
 
-        <!-- for every page you want to protect, include auth.js and a call to check whether the user is logged in -->
+        <!-- for every page you want to protect, include auth.js -->
         <script src="//forio.com/tools/js-libs/<%= version %>/components/login/auth.js"></script>
-        <script>auth.checkLogin();</script>
-
-        <!-- for every page on which you want a logout button, include the logout script -->
-        <script src="//forio.com/tools/js-libs/<%= version %>/components/login/logout.js"></script>
     </head>
     <body>
         <!--
@@ -28,8 +24,8 @@
         -->
         <div class="body">This is the facilitator page for the simulation. Only end users who are facilitators and are logged in will have access to this page.</div>
 
-        <!-- the logout link or button calls the logout script -->
-        <a href="#" class="logout">Log out</a>
+        <!-- explicitly log out; return to the login page -->
+        <button onclick="logout()">Log out</button>
 
         <div class="powered-by"></div>
     </body>
