--- a/src/components/login/index.html
+++ b/src/components/login/index.html
@@ -7,53 +7,26 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- the inserted pop over is compatible with bootstrap classes, so optionally you can include bootstrap -->
+        <!-- optionally you can include bootstrap and/or other styling -->
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
-        <!-- login.css provides styling for the group selector pop over dialog -->
         <link rel="stylesheet" href="//forio.com/tools/js-libs/<%= version %>/components/login/login.css">
 
-        <!-- make sure to include jquery, epicenter.js, and login.js -->
+        <!-- make sure to include jquery and epicenter.js -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="//forio.com/tools/js-libs/<%= version %>/epicenter.min.js"></script>
-        <script src="//forio.com/tools/js-libs/<%= version %>/components/login/login.js"></script>
+
+        <!-- for every page you want to protect, include auth.js -->
+        <script src="//forio.com/tools/js-libs/<%= version %>/components/login/auth.js"></script>
     </head>
     <body>
         <!--
-            The main login form.
-            The form id must be "login". 
-            The form action is the page where users are directed after successfully logging in.
-            If you change the form action, make the corresponding change in auth.js (pages.student).
-
-            Inside the form, specify the username and password fields that the JavaScript
-            will use as credentials to login. Optionally you can specify an account
-            and project to override the url.
-
-            The login action happens on the submit event for the form.
+            The main page for your simulation.
         -->
-        <form id="login" action="simulation.html">
-            <div>
-                <h4 class="text-center">Please Login to this Simulation</h4>
-                <hr>
-                <div class="form-group control">
-                    <label for="">Username</label>
-                    <input id="username" type="text" class="form-control">
-                </div>
-                <div class="form-group control">
-                    <label for="">Password</label>
-                    <input id="password" type="password" class="form-control">
-                </div>
-                <!-- account and project fields are optional, normally account/project are extracted from the url -->
-                <input type="hidden" id="account">
-                <input type="hidden" id="project">
+        <div class="body">This is the main page for the simulation. Only standard (non-facilitator) end users who are logged in will have access to this page.</div>
 
-                <div class="control">
-                    <label for="">&nbsp;</label><button class="btn btn-signin pull-right" type="submit">Login</button>
-                </div>
-                <!-- add a login-message div if you want to display login failed errors (e.g. wrong username or password) -->
-                <div id="login-message" class="alert alert-danger" style="display:none;"></div>
-            </div>
-        </form>
+        <!-- explicitly log out; return to the login page -->
+        <button onclick="logout()">Log out</button>
+
         <div class="powered-by"></div>
     </body>
 </html>
